deployment_chronograf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tick
  name: chronograf-deployment
  labels:
    app: chronograf
spec:
  selector:
    matchLabels:
     app: chronograf
  template:
    metadata:
      labels:
        app: chronograf 
    spec:
      volumes:
      - name: data
        hostPath:
          path: /var/lib/chronograf
          type: Directory
      containers:
        - name: backend
          command: ["chronograf"]
          image: chronograf 
          ports:
            - containerPort: 8888
          volumeMounts:
          - name: data
            mountPath: /var/lib/chronograf
