deployment_influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tick
  labels:
    app: influxdb
  name: influxdb-deployment 
spec:
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      volumes:
      - name: config
        configMap:
          name: influxdb
          items:
            - key: influxdb.conf
              path: influxdb.conf
      - name: init-iql
        configMap:
          name: influxdb
          items:
            - key: init.iql
              path: init.iql
      - name: data
        hostPath:
          path: /var/lib/influxdb
          type: Directory
      containers:
        - name: influxdb
          image: influxdb 
          ports:
            - containerPort: 8086
            - containerPort: 8083
          volumeMounts:
          - name: config
            mountPath: /etc/telegraf
          - name: init-iql
            mountPath: /docker-entrypoint-initdb.d
          - name: data
            mountPath: /var/lib/influxdb
