deployment_kapacitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tick
  name: kapacitor-deployement
  labels:
    app: kapacitor
spec:
  selector:
    matchLabels:
      app: kapacitor
  template:
    metadata:
      labels:
        app: kapacitor
    spec:
      volumes:
      - name: data
        hostPath:
          path: /var/lib/kapacitor
          type: Directory
      containers:
        - name: kapacitor
          image: kapacitor
          ports:
            - containerPort: 9092
          volumeMounts:
          - name: data
            mountPath: /var/lib/kapacitor
