deployment_telegraf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tick
  name: telegraf-deployment
  labels:
    app: telegraf
spec:
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf 
    spec:
      containers:
        - name: telegraf
          image: telegraf
          ports:
          - name: udp
            protocol: UDP
            containerPort: 8092
          - name: http
            containerPort: 8186
          volumeMounts:
          - name: config
            mountPath: /etc/telegraf
      volumes:
      - name: config
        configMap:
          name: telegraf-infra
