services_chronograf.yaml
apiVersion: v1
kind: Service
metadata:
  name: chronograf
  namespace: tick
spec:
  ports:
    - name: http
      port: 3000 
      protocol: TCP
      targetPort: 8888
  selector:
    app: chronograf
