services_influxdb.yaml
# tick/influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tick
  name: influxdb
spec:
  clusterIP: None
  selector:
    app: influxdb
  ports:
  - name: api
    port: 8086
    targetPort: 8086
  - name: admin
    port: 8083
    targetPort: 8083
