services_kapacitor.yaml
# tick/influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tick
  name: kapacitor
spec:
  clusterIP: None
  selector:
    app: kapacitor 
  ports:
  - name: api
    port: 9092
    targetPort: 9092
