ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: tick
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - yourdnsname
    secretName: your-dns-name-tls
  rules:
  - host: yourdnsname
    http:
      paths:
        - path: /
          backend:
            serviceName: chronograf
            servicePort: 3000
